fix: Null-check topic ID on stale entries cleanup (#999)